--- a/index.html
+++ b/index.html
@@ -202,25 +202,25 @@
             <div class="row justify-content-center row-cols-2 row-cols-md-3 row-cols-lg-6 mt-4 gy-4 skills-container" data-aos="fade-up" data-aos-delay="200">
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/HTML.svg" alt="HTML">
+                        <img class="skill-image" src="assets/images/skills/HTML.svg" alt="HTML">
                         <p class="skill-name">HTML</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/CSS.svg" alt="CSS"/>
+                        <img class="skill-image" src="assets/images/skills/CSS.svg" alt="CSS"/>
                         <p class="skill-name">CSS</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/JS.svg" alt="JavaScript">
+                        <img class="skill-image" src="assets/images/skills/JS.svg" alt="JavaScript">
                         <p class="skill-name">JS</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/NodeJS.svg" alt="NodeJS">
+                        <img class="skill-image" src="assets/images/skills/NodeJS.svg" alt="NodeJS">
                         <p class="skill-name">NodeJS</p>
                     </div>
                 </div>
@@ -238,25 +238,25 @@
                 </div>
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/Bootstrap.svg" alt="Bootstrap">
+                        <img class="skill-image" src="assets/images/skills/Bootstrap.svg" alt="Bootstrap">
                         <p class="skill-name">Bootstrap</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/C.svg" alt="C">
+                        <img class="skill-image" src="assets/images/skills/C.svg" alt="C">
                         <p class="skill-name">C</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/Python.svg" alt="Python">
+                        <img class="skill-image" src="assets/images/skills/Python.svg" alt="Python">
                         <p class="skill-name">Python</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="skill">
-                        <img class="skill-image" src="/assets/images/skills/MongoDB.svg" alt="MongoDB">
+                        <img class="skill-image" src="assets/images/skills/MongoDB.svg" alt="MongoDB">
                         <p class="skill-name">MongoDB</p>
                     </div>
                 </div>
@@ -273,37 +273,37 @@
             <div class="row justify-content-center row-cols-2 row-cols-md-3 row-cols-lg-6 mt-4 gy-4 tools-container" data-aos="fade-down" data-aos-delay="200">
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/vscode.svg" alt="VSCode">
+                        <img class="tool-image" src="assets/images/tools/vscode.svg" alt="VSCode">
                         <p class="tool-name">VSCode</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/github.svg" alt="Github">
+                        <img class="tool-image" src="assets/images/tools/github.svg" alt="Github">
                         <p class="tool-name">Github</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/canva.svg" alt="Canva">
+                        <img class="tool-image" src="assets/images/tools/canva.svg" alt="Canva">
                         <p class="tool-name">Canva</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/Figma.svg" alt="Figma">
+                        <img class="tool-image" src="assets/images/tools/Figma.svg" alt="Figma">
                         <p class="tool-name">Figma</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/ChatGPT.svg" alt="ChatGPT">
+                        <img class="tool-image" src="assets/images/tools/ChatGPT.svg" alt="ChatGPT">
                         <p class="tool-name">ChatGPT</p>
                     </div>
                 </div>
                 <div class="col">
                     <div class="tool">
-                        <img class="tool-image" src="/assets/images/tools/Gemini.svg" alt="Gemini">
+                        <img class="tool-image" src="assets/images/tools/Gemini.svg" alt="Gemini">
                         <p class="tool-name">Gemini</p>
                     </div>
                 </div>
@@ -335,7 +335,7 @@
                         <div class="card-body">
                             <div class="d-flex align-items-center">
                                 <div class="col-2">
-                                    <img src="/assets/images/projects/pfpfinder-icon.png" class="img-fluid icon" alt="PfpFinder Logo">
+                                    <img src="assets/images/projects/pfpfinder-icon.png" class="img-fluid icon" alt="PfpFinder Logo">
                                 </div>
                                 <div class="col-7 p-0">
                                     <a href="https://pfpfinder.com/" class="card-title title" target="_blank">PfpFinder</a>
@@ -353,7 +353,7 @@
                             <div class="overlay">
                                 <a href="https://pfpfinder.com/" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
                             </div>
-                            <img src="/assets/images/projects/pfpfinder-banner.webp" class="card-img-top banner" alt="PfpFinder Banner">
+                            <img src="assets/images/projects/pfpfinder-banner.webp" class="card-img-top banner" alt="PfpFinder Banner">
                         </div>
                     </div>
                 </div>
@@ -363,7 +363,7 @@
                         <div class="card-body">
                             <div class="d-flex align-items-center">
                                 <div class="col-2">
-                                    <img src="/assets/images/projects/bikekart-icon.png" class="img-fluid icon" alt="BikeKart Template Logo">
+                                    <img src="assets/images/projects/bikekart-icon.png" class="img-fluid icon" alt="BikeKart Template Logo">
                                 </div>
                                 <div class="col-7 p-0">
                                     <a href="https://itsvijaysingh.github.io/BikeKart/" class="card-title title" target="_blank">BikeKart</a>
@@ -381,7 +381,7 @@
                             <div class="overlay">
                                 <a href="https://itsvijaysingh.github.io/BikeKart/" class="btn" target="_blank"><i class="bi bi-arrow-up-right-circle-fill"></i></a>
                             </div>
-                            <img src="/assets/images/projects/bikekart-banner.webp" class="card-img-top banner" alt="BikeKart Banner">
+                            <img src="assets/images/projects/bikekart-banner.webp" class="card-img-top banner" alt="BikeKart Banner">
                         </div>
                     </div>
                 </div>
@@ -391,7 +391,7 @@
                         <div class="card-body ">
                             <div class="d-flex align-items-center">
                                 <div class="col-2">
-                                    <img src="/assets/images/projects/simplcalc-icon.png" class="img-fluid icon" alt="SimplCalc Icon">
+                                    <img src="assets/images/projects/simplcalc-icon.png" class="img-fluid icon" alt="SimplCalc Icon">
                                 </div>
                                 <div class="col-7 p-0">
                                     <span class="card-title title">SimplCalc</span>
@@ -409,7 +409,7 @@
                             <div class="overlay">
                                 <i class="bi bi-hourglass-split"></i>
                             </div>
-                            <img src="/assets/images/projects/simplcalc-banner.webp" class="card-img-top banner" alt="SimplCalc Banner">
+                            <img src="assets/images/projects/simplcalc-banner.webp" class="card-img-top banner" alt="SimplCalc Banner">
                         </div>
                     </div>
                 </div>
@@ -431,7 +431,7 @@
                                 Your brilliance is truly inspiring. You bring so much positivity and creativity wherever you go. Keep shining brightly! Working with you has been always an incredible experience.
                             </p>
                             <div class="pic">
-                                <img src="/assets/images/testimonials/Moinudeen.webp" alt="Moinudeen Pic">
+                                <img src="assets/images/testimonials/Moinudeen.webp" alt="Moinudeen Pic">
                             </div>
                             <div class="detail">
                                 <h4 class="name">Moinudeen</h4>
@@ -444,7 +444,7 @@
                                 Bro, I admire your hard work. Your efforts speak volumes about you. You're amazing! Much love, bro! 🤜🤛
                             </p>
                             <div class="pic">
-                                <img src="/assets/images/testimonials/Nadeem.webp" alt="Nadeem Pic">
+                                <img src="assets/images/testimonials/Nadeem.webp" alt="Nadeem Pic">
                             </div>
                             <div class="detail">
                                 <h4 class="name">Nadeem</h4>
@@ -457,7 +457,7 @@
                                 Vijay's commitment and hard work shine through in everything he does.
                             </p>
                             <div class="pic">
-                                <img src="/assets/images/testimonials/J.svg" alt="Jwala Pratap Pic" class="">
+                                <img src="assets/images/testimonials/J.svg" alt="Jwala Pratap Pic" class="">
                             </div>
                             <div class="detail">
                                 <h4 class="name">Jwala Pratap</h4>
@@ -470,7 +470,7 @@
                                 Working with Vijay has been an incredible experience. His dedication in web development truly shine through his work. He has a remarkable ability to turn ideas into reality & crafting websites that exceed expectations.
                             </p>
                             <div class="pic">
-                                <img src="/assets/images/testimonials/Rahul.webp" alt="Rahul Pic">
+                                <img src="assets/images/testimonials/Rahul.webp" alt="Rahul Pic">
                             </div>
                             <div class="detail">
                                 <h4 class="name">Rahul Sharma</h4>
